# sha-1

./: CMakeLists.txt  README.md
examples/: sha1sum.cpp
include/marlo/: sha1.hpp
src/: sha1.cpp
